Added inspiration for characters with endpoint to toggle
